--- a/usu_assignments/ch03_dynamics.ipynb
+++ b/usu_assignments/ch03_dynamics.ipynb
@@ -410,7 +410,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mavsim_env",
+   "display_name": "uav_env",
    "language": "python",
    "name": "python3"
   },
